mailpoet/assets/css/src/components-automation-editor/_step.scss
.mailpoet-automation-editor-step-wrapper {
  margin: 0 auto;
  position: relative;
  width: 280px;
}

.mailpoet-automation-step-more-menu {
  position: absolute;
  right: 4px;
  top: 14px;

  button.components-button.is-small.has-icon {
    height: 24px;
    min-width: 24px;
    padding: 3px;
    width: 24px;
  }
}

.mailpoet-automation-editor-step {
  appearance: none;
  background: white;
  border: 1px solid #dcdcde;
  border-radius: 4px;
  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05);
  display: grid;
  grid-gap: 12px;
  grid-template-columns: auto 1fr;
  line-height: 1.4;
  margin: 4px;
  padding: 12px;
  text-align: left;
  width: calc(100% - 8px);

  &.is-unknown-step {
    background: #f0f0f1;
  }

  &:focus,
  &.is-selected-step {
    box-shadow:
      // space
      0 0 0 1px #fbfbfb,
      // focus ring
      0 0 0 calc(var(--wp-admin-border-width-focus) + 1px)
        var(--wp-admin-theme-color),
      // original shadow
      0 1px 2px rgba(0, 0, 0, 0.05);
  }

  &:has(.mailpoet-automation-editor-step-footer) {
    padding-bottom: 8px;
  }
}

.mailpoet-automation-editor-step-icon {
  display: flex;
}

.mailpoet-automation-editor-step-title {
  align-items: center;
  color: $color-wordpress-grey-dark;
  display: flex;
  gap: 8px;
}

.mailpoet-automation-editor-step-subtitle {
  color: inherit;
  font-weight: 600;
}

.mailpoet-automation-editor-step-footer {
  column-gap: 4px;
  display: flex;
  grid-column: 1 / -1;
  justify-content: flex-end;
}

.mailpoet-automation-colored-icon {
  border-radius: 50%;
  box-sizing: content-box;
  display: flex;
  justify-content: center;
  padding: 8px;
  position: relative;
}

